charackter + moves + kollisionsabfrage tiger

--- a/L16_ScrollerCollide/index.html
+++ b/L16_ScrollerCollide/index.html
@@ -21,6 +21,6 @@
     Scroller Collide
   </h1>
   <canvas width="800" height="600" style="background-color: aliceblue;"></canvas>
-  <img src="Hare.png"/>
+  <img  src="happytiger-spride.png"/>
 </body>
 </html>
